# heimdallr

./: Cargo.toml  Dockerfile  default-config.yaml  rustfmt.toml
api/: Cargo.toml  build.rs
api/protos/: auth.proto  heath_check.proto
api/src/: lib.rs
server/: Cargo.toml  diesel.toml
server/migrations/00000000000000_diesel_initial_setup/: up.sql
server/migrations/2020-01-09-034725_extensions/: down.sql  up.sql
server/migrations/2020-01-09-034958_create_keys/: up.sql
server/src/: app.rs  error.rs  jwt.rs  lib.rs  logging.rs  settings.rs
server/src/commands/: database.rs
server/src/db/: maintenance.rs  mod.rs  schema.rs  test_helpers.rs
server/src/jwt/: claims.rs  mod.rs
server/src/services/: auth.rs  health_check.rs  mod.rs
