[package]
name    = "heimdallr_api"
version = "0.1.0"
authors = ["Nate Strandberg <nater540@gmail.com>"]
edition = "2018"
build   = "build.rs"

[dependencies]
bytes = "0.5"
prost = "0.6"
prost-types = "0.6.1"
async-stream = "0.2"
tonic = "0.1.1"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[build-dependencies]
tonic-build = "0.1.1"
