[package]
name = "heimdallr"
version = "0.1.0"
authors = ["Nate Strandberg <nater540@gmail.com>"]
edition = "2018"

[dependencies]
tonic = "0.1.1"
heimdallr_api = { path = "../api" }
clap = "2.33.0"
config = "0.10.1"
chrono = { version = "0.4.10", features = ["serde"] }
lazy_static = "1.4.0"
serde_yaml = "0.8.11"
serde_json = "1.0.48"
rust-argon2 = "0.8.1"
serde = { version = "1.0.104", features = ["derive"] }
uuid  = { version = "0.8.1", features = ["serde", "v4"] }
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
jsonwebtoken = "7.1.0"

# Database
r2d2 = "0.8.8"
diesel_migrations = "1.4.0"
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "serde_json", "chrono", "uuidv07", "numeric"] }

# Logging
log = "0.4.8"
fern = "0.5.9"

openssl-sys = "*"

[dev-dependencies]
pretty_assertions = "0.6.1"
dotenv = "0.15.0"

[features]
# Force openssl-sys to staticly link in the openssl library.
# Necessary when cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
